Closed Bug 1303964 Opened 9 years ago Closed 9 years ago

The separators in context menu are not colored correctly under gtk+ 3.20

Categories

(Core :: Widget: Gtk, defect, P4)

51 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: ht990332, Assigned: karlt)

References

(Blocks 1 open bug)

Details

(Whiteboard: tpi:+)

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0 Build ID: 20160920014205 Steps to reproduce: The separators in context menu are not colored correctly. They don't follow the current gtk+ color scheme. Note: You need gtk 3.20 or higher and the default Adwaita theme to see this.
Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Priority: -- → P4
Whiteboard: tpi:+
Reproduces with 46.0b11, so probably not a regression.
Blocks: gtk-3.20
Status: UNCONFIRMED → NEW
Ever confirmed: true
Any news on this? It's even visible on the outline of the back button, or is this a different issue?
This one is the widget used in context menus and the 'main toolbar' menus. But post a screenshot to check if yours if the same issue.
Someone posted a fix on reddit: https://www.reddit.com/r/gnome/comments/5c7x0u/how_to_fix_firefox_black_borders_in_gnome_320/ Can this help to fix this upstream?
It is kind of odd that a gtk+ css change would fix it. Is Firefox using some css attributes not available anymore in gtk+ 3.20? Would it be possible for someone to ask gtk+ developers?
https://bugzilla.gnome.org/show_bug.cgi?id=774263#c1 says: >> The selector for separators changed in 3.20 from 'GtkSeparator' to 'separator'.
Hi, as I wrote on the gtk bug, I think firefox is looking for the wrong properties, in 3.20 quite a bit of stuff changed (for the better from my css monkey pov), separators are just boxes, so the styling is done using the background properties, hence the color prop is inherited from the parent. For frames it's a similar issue I guess, since the frame is border, hence border related properties. As a partial fix you could looke for background-color for the separator and border-color on the frame border node for the frame color, clearly this may break in themes using background or border images to style those.
See Also: → 1315527
This is about GTK 3.20 no longer using gtk_render_line() for separator menuitems.
Assignee: nobody → karlt
Status: NEW → ASSIGNED
Depends on: 1287036
Comment on attachment 8811569 [details] bug 1303964 draw only background and frame of separator menuitems in GTK versions > 3.20 https://reviewboard.mozilla.org/r/93642/#review94158 Makes much sense.
Attachment #8811569 - Flags: review?(stransky) → review+
Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/92bc4b8d4692 draw only background and frame of separator menuitems in GTK versions > 3.20 r=stransky+263117
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: