bug 1303964 draw only background and frame of separator menuitems in GTK versions > 3.20 r=stransky+263117

In GTK 3.20, gtk_menu_item_draw() just draws the root widget gadget, depending
on the theme to style menu items with CSS name "separator" appropriately.

MozReview-Commit-ID: 6AIxPzFe0Rg